This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

13-May-2001 (Lars Duening)  (3.3.55)
    - (prolang.y) Undid the casting change, as it broke the idiom
         's = (string)foo->bar();' where bar() may signal a failure
         by returning integer 0. It's the old 0/nil dichotomy again.
    - (efuns.c) Efun sscanf(): the format '%s%d' failed to parse 'ab1cd'
         correctly (reported by Pulami).

09-May-2001 (Lars Duening)  (3.3.54)
    - (prolang.y) Casting an unknown or mixed type now always inserts
         a proper conversion (reported by Tomi).
    - (heartbeat.c) The result for DID_ST_HBEAT_AVG_PROC was computed
         as int instead of float (reported by Freaky).
    - (mud/morgengrauen) Added basic support for the MorgenGrauen 3.2.6
         mudlib.

08-May-2001 (Lars Duening)
    - (prolang.y) The expression 'a & b' failed to track the types if one
         of the operands was of TYPE_ANY (reported by Gnomi).

06-May-2001 (Lars Duening)
    - (interpret.c) Added a protection against simple reference loops
         as created by 'b = 0 || &a; b = 0 || &a;' (reported by Gnomi).

29-Apr-2001 (Lars Duening)  (3.3.53)
    - (mapping.c) m_values() failed to properly check the mapping width,
         especially on empty mappings.
    - (array.c) Looking up a key in an array failed on some arrays (reported
         by Freaky).
    - (prolang.y) Nested definitions of inline closure no longer generates
         warnings about the arguments shadowing previous declarations
         (reported by Freaky).

28-Apr-2001 (Lars Duening)  (3.3.52)
    - (several files) Removed the support for Atari and OS/2, restricted
         the Amiga support to gcc/ixemul.
    - (pkg-alists.c) Removed compiler warnings.

27-Apr-2001 (Lars Duening)  (3.3.51)
    - (sprintf.c) Duh. A typo caused '%^' to eat the next character
         from the format string (reported by Robert).