@@ -31,6 +31,10 @@ DESCRIPTION
         Specifying ~ will perform and count the match, but not store
         the result.
 
+        If the %s specifier is not at the end of the format string,
+        it is matched only if the following character(s) or format
+        is found, too. See below for an example.
+
         The difference between %d and %D/%U is that the latter will abort
         an immediately preceeding %s as soon as possible, whereas the
         former will attempt to make largest match to %s first.
@@ -49,6 +53,15 @@ EXAMPLE
            write("Usage: throw <what> to <who>\n");
         else
            write("You throw a "+what+" to "+who+" to get his attention.\n");
+
+        sscanf("ab", "%s%s", who, what)
+          ==> result 2, who = "", what = "ab"
+
+        sscanf("ab", "%s %s", who, what)
+          ==> result 0, who = 0, what = 0
+
+        sscanf("ab ", "%s %s", who, what)
+          ==> result 2, who = "ab", what = ""
 
 SEE ALSO
         extract(E), explode(E), regexp(E)
