@@ -22,12 +22,13 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 55)
-(Parent-Version lpmud 3-3 54)
-(Version-Log "Undid the casting change.")
+(Project-Version lpmud 3-3 56)
+(Parent-Version lpmud 3-3 55)
+(Version-Log "Clarified the matching of '%s' in sscanf().
+lambda() couldn't compile simul_efuns with extended varargs correctly.")
 (New-Version-Log
 "")
-(Checkin-Time "Mon, 14 May 2001 07:50:43 -0600")
+(Checkin-Time "Tue, 15 May 2001 23:51:17 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -60,8 +61,8 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.3 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.15 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.118 644))
-  (HISTORY (lpmud/f/49_HISTORY 1.174 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.119 644))
+  (HISTORY (lpmud/f/49_HISTORY 1.175 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.10 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
 
@@ -119,7 +120,7 @@
   (src/call_out.h (lpmud/f/45_call_out.h 1.7.1.4 644))
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.12 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.5 644))
-  (src/closure.c (lpmud/d/4_closure.c 1.41.1.27 644))
+  (src/closure.c (lpmud/d/4_closure.c 1.41.1.28 644))
   (src/comm.c (lpmud/d/2_comm1.c 1.69.1.35 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.12 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.6 644))
@@ -904,7 +905,7 @@
   (doc/efun/sprintf (lpmud/c/35_sprintf 1.3.1.5 644))
   (doc/efun/sprintf.de (lpmud/L/36_sprintf.de 1.1 644))
   (doc/efun/sqrt (lpmud/q/26_sqrt 1.1.1.2 644))
-  (doc/efun/sscanf (lpmud/q/27_sscanf 1.4 644))
+  (doc/efun/sscanf (lpmud/q/27_sscanf 1.5 644))
   (doc/efun/stringp (lpmud/q/28_stringp 1.3 644))
   (doc/efun/strlen (lpmud/q/29_strlen 1.2 644))
   (doc/efun/strstr (lpmud/q/30_strstr 1.3 644))
